# zed-php

./: Cargo.toml  extension.toml
.github/workflows/: test.yml
debug_adapter_schemas/: Xdebug.json
languages/php/: brackets.scm  config.toml  debugger.scm  embedding.scm  highlights.scm  injections.scm  outline.scm  runnables.scm  tasks.json  textobjects.scm
languages/phpdoc/: highlights.scm
src/: language_servers.rs  php.rs  xdebug.rs
src/language_servers/: phpantom.rs
tests/: runnables.rs  tasks.rs
tests/support/: mod.rs
